[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Interface/SlideControl.tres" type="Theme" id=1]
[ext_resource path="res://SceneComponent/Display/SlidePresentation/Slide2DControl.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[node name="Slide2DControl" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.180392, 0.180392, 0.180392, 0.529412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 0.8
margin_bottom = -6.0
size_flags_horizontal = 0
size_flags_vertical = 0
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextBtn" type="Button" parent="."]
anchor_left = 0.8
anchor_top = 0.85
anchor_right = 1.0
anchor_bottom = 0.93
text = "Next"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PrevBtn" type="Button" parent="."]
anchor_top = 0.85
anchor_right = 0.2
anchor_bottom = 0.93
text = "Previous"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextContainer" type="Panel" parent="."]
anchor_left = 0.2
anchor_top = 0.8
anchor_right = 0.8
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="TextContainer"]
anchor_left = 0.03
anchor_top = 0.06
anchor_right = 0.97
anchor_bottom = 0.95
bbcode_text = "Hello World!sdfsdfsdfsdf"
text = "Hello World!sdfsdfsdfsdf"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="NextBtn" to="." method="_on_next_pressed"]
[connection signal="pressed" from="PrevBtn" to="." method="_on_prev_pressed"]
